// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene API /api/scenes GET should retun all scene 1`] = `
Array [
  Object {
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": "29699398-449c-48fb-8f5c-84186cdf8279",
    "description": "this is a test",
    "name": "scene_1",
    "sceneId": "05442486-0878-440c-9db1-a7006c25a39f",
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
  Object {
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": "29699398-449c-48fb-8f5c-84186cdf8279",
    "description": "this is a second test",
    "name": "scene_2",
    "sceneId": "18feb598-32cb-472f-8b29-a7e7fe41e06b",
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
]
`;

exports[`Scene API /api/scenes POST should create a scene 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": "29699398-449c-48fb-8f5c-84186cdf8279",
  "description": "this is a test scene",
  "name": "testScene",
  "sceneId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "updatedAt": Any<Date>,
}
`;

exports[`Scene API /api/scenes POST should create a scene 2`] = `
Object {
  "actionId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "body": "{\\"on\\":true}",
  "name": "action",
  "sceneId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "targetId": "29699398-449c-48fb-8f5c-84186cdf8279",
  "type": "DIO",
}
`;

exports[`Scene API /api/scenes/:id GET should retun a scene 1`] = `
Object {
  "actions": Array [
    Object {
      "actionId": "0fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
      "body": Object {
        "on": true,
      },
      "name": "action turn on",
      "sceneId": "05442486-0878-440c-9db1-a7006c25a39f",
      "targetId": "4fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
      "type": "DIO",
    },
    Object {
      "actionId": "1fc1d78e-fd1c-4717-b610-65d2fa3d01b2",
      "body": Object {
        "on": false,
      },
      "name": "action turn off",
      "sceneId": "05442486-0878-440c-9db1-a7006c25a39f",
      "targetId": "29699398-449c-48fb-8f5c-84186cdf8279",
      "type": "DIO",
    },
  ],
  "createdAt": "2018-01-01T00:00:00.000Z",
  "createdBy": "29699398-449c-48fb-8f5c-84186cdf8279",
  "description": "this is a test",
  "name": "scene_1",
  "sceneId": "05442486-0878-440c-9db1-a7006c25a39f",
  "updatedAt": "2018-01-02T00:00:00.000Z",
}
`;

exports[`Scene API /api/scenes/:id PATCH should update a scene 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": "29699398-449c-48fb-8f5c-84186cdf8279",
  "description": "this is an updated test",
  "name": "scene_2",
  "sceneId": StringMatching /\\[a-fA-F0-9-\\]\\{36\\}/,
  "updatedAt": Any<Date>,
}
`;
